--- a/Calculadora FINAL/style.css
+++ b/Calculadora FINAL/style.css
@@ -26,12 +26,12 @@ body{
     width: 356px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #2D2A37;
+    background-color: #2d2020;
     border-radius: 2.5%;
     
 }
 .button1{
-    color: #7F45E2;
+    color: #c20505;
 }
 
 .buttons{
@@ -47,8 +47,8 @@ button{
     height: 64px;
     border-radius: 100%;
     border-style: solid;
-    border-color: #2D2A37;
-    background-color: #2D2A37;
+    border-color: #2d2020;
+    background-color: #2d2020;
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.6);
     font-size: 35px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -57,7 +57,7 @@ button{
 }
 
 .buttonPurple{
-    background-color: #462878;
+    background-color: #7f0303;
 }
 
 p{
@@ -85,7 +85,7 @@ p{
     color: white;
     text-align: end;
     border-style: none;
-    background-color: #2D2A37;
+    background-color: #2d2020;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -95,14 +95,14 @@ p{
 }
 
 .buttonLightPurple{
-    background-color: #7F45E2;
+    background-color: #b30606;
 }
 
 div button{
     transition: color 0.2s;
 }
 div button:hover{
-    background-color: #7764b1;
+    background-color: #d04d4d;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8); 
 }
 
